--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==1.10.0+cpu 
+torchvision==0.11.0+cpu
 Flask==2.1.2
 flask_restful==0.3.9
 scipy==1.8.1
