--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-https://download.pytorch.org/whl/cpu/torch-1.3.1%2Bcpu-cp36-cp36m-linux_x86_64.whl
+torch==1.8.1+cpu 
+torchvision==0.9.1+cpu
 Flask==2.1.2
 flask_restful==0.3.9
 scipy==1.8.1
