--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-https://download.pytorch.org/whl/cpu/torch-1.11.0.post2-cp37-cp37m-linux_x86_64.whl
-Flask==2.1.2
-flask_restful==0.3.9
-scipy==1.8.1
-sentence_transformers==2.2.2
-spellchecker==0.4
-textstat==0.7.3
+Flask
+flask_restful
+scipy
+sentence_transformers
+spellchecker
+textstat
 gunicorn
