--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+torch==1.11.0+cpu
+torchvision==0.12.0+cpu
+torchaudio==0.11.0
 Flask
 flask_restful
 scipy
 sentence_transformers
-spellchecker
+pyspellchecker
 textstat
 gunicorn
